--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <header>
       <h1>My First Website</h1>
       <nav class="subnav">
-        <a href="myfirstwebsite.html">Home</a> |
+        <a href="index.html">Home</a> |
         <a href="aboutme.html">About Me</a> |
         <a href="favoritethings.html">Favorite Things</a>
       </nav>
