--- a/aboutme.html
+++ b/aboutme.html
@@ -3,5 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>about me</title>
-  <link href="/style.css" rel="stylesheet" type="text/css" media="all" />
+  <title>My first webiste</title>
+<link href="style.css" rel="stylesheet" type="text/css" media="all">
+
+
+</head>
+
+<body>
+  <div id="container">
+
+    <header>
+		<h1 style="text-align: center; color: white">Clay Zarinana's Portfolio&nbsp;</h1>
+
+      <nav class="subnav">
+        <a href="index.html">Home</a> |
+        <a href="aboutme.html">About Me</a> |
+        <a href="favoritethings.html">Favorite Things</a>
+      </nav>
+    </header>
+
+    <main>
+		
+      <div class="content-box">
+        <div class="intro-container">
+			
+		<h1 style="text-align: center;">About me!</h1>
+
+		<p class="intro">
+  Hello! I'm Clay Zarinana, a Highschool Senior at El Camino High School. 
+  My favorite things to do in my spare time include playing video games, 
+  drawing, and watching YouTube videos! I'm very passionate about science 
+  and other things.
+</p>
+
+        </div>
+		  <div  class= "divider"> </div>
+		    <div style="display: flex; align-items: flex-start;">
+  <div style="width: 320px; margin-right: 20px;">
+    <iframe 
+      width="300" 
+      height="170" 
+      src="https://www.youtube.com/embed/jDZX7T-zq_k" 
+      title="Youtube Video" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen
+      style="border-radius: 15px; box-shadow: 0 3px 6px rgba(0,0,0,0.4);">
+    </iframe>
+  </div>
+				
+  <div style="flex: 1;">
+    <h2>Youtube&nbsp;&nbsp;</h2>
+    <p>
+      embed test!&nbsp; &nbsp; </p>
+  </div>
+
+</div>
+		  <div class="divider"></div>
+		  <h3> What ive done so far !&nbsp;&nbsp; </h3>
+		 <li> Added a photo with alt text</li>
+		  <li> Proper Page structure</li>
+		  <li>Added image header that matches my color scheme</li>
+		  <li> Basic links </li>
+		  <li> 3 Boxes that should be able to redirect you to their proper page.</li>
+      </div>
+    </main>
+    <footer>
+      <p>© 2025 Clay Zarinana. All rights reserved.</p>
+    </footer>
+</div>
+	
+</body>
+	
+</html>
+	
