--- a/favoritethings.html
+++ b/favoritethings.html
@@ -4,6 +4,66 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My first webiste</title>
-  <link href="/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="style.css" rel="stylesheet" type="text/css" media="all">
 
-	<header> Favorite Things </header>
+
+</head>
+
+<body>
+  <div id="container">
+
+    <header>
+		<h1 style="text-align: center; color: white">Clay Zarinana's Portfolio&nbsp;</h1>
+
+      <nav class="subnav">
+        <a href="index.html">Home</a> |
+        <a href="aboutme.html">About Me</a> |
+        <a href="favoritethings.html">Favorite Things</a>
+      </nav>
+    </header>
+
+    <main>
+		
+      <div class="content-box">
+		  <h1 style="text-align: center"> Favorite things! </h1>
+        <div class="columns-wrapper">
+          <div class="threecolumns">
+            <h3 style="text-align: center:"> In-n-Out</h3>
+			   <img src="https://i.imgur.com/lMpcVv0.jpeg" alt="Yakuza Game Cover" class="yakuza-img" style="width: 200px; display: block; margin: 0 auto 8px;" />
+            <p>In-N-Out has been the fast food staple of the west coast since its opening in 1948 in baldwin park, CA. Its simple and cheap, yet flavorful menu has drawn people to the west coast worldwide! My personal favorite order from the establishment is a double double cheeseburger, animal fries, along with a cold refreshing coke, and is best eaten with a beautiful view from your nearby beach.  </p>
+          </div>
+
+          <div class="threecolumns">
+            <h3>Yakuza</h3>
+			  <img src="https://i.imgur.com/gp15GIB.jpeg" alt="Yakuza Game Cover" class="yakuza-img" style="width: 200px; display: block; margin: 0 auto 8px;" />
+            <p>The yakuza series, created by Ryu ga Gotoku and SEGA© in 2005! First released in Japan on the Playstation 2,&nbsp; the series has expanded to over 23 games total- from the main Yakuza series to Like a Dragon and several spin offs, yakuza has been my all time favorite game for over a year! I love the storyline, characters, and the overall combat gameplay, and is my number one game rec for people who love action games and single player story games. </p>
+          </div>
+
+          <div class="threecolumns">
+            <h3>Takoyaki</h3>
+			  <img src="https://i.imgur.com/8Zk8WtU.jpeg" alt="Yakuza Game Cover" class="yakuza-img" style="width: 200px; display: block; margin: 0 auto 8px;" />
+            <p>Takoyaki たこ焼き - Or 'Grilled Octopus' is a Japanese dish made with wheat batter, octopus, and toppings such as mayo, seaweed and bonito flakes! Its savory, with a umami taste, along with having a crispy outside and a chewy flavorful inside from the octopus, creating the ultimate balance of flavors once the sweet takoyaki sauce and mayo are added, and is personally one of my favorite Japanese Dishes for these reasons.</p>
+			  
+
+          </div>
+        </div>
+		  <div  class= "divider"> </div>
+		    <div style="display: flex; align-items: flex-start;">
+  <div style="width: 320px; margin-right: 20px;"> </div>
+				
+
+</div>
+		  <h3> What ive done so far !&nbsp;&nbsp; </h3>
+		 <li> Added a photo with alt text</li>
+		  <li> Boxes that display information about my favorite things and my reasonings for liking them!.</li>
+      </div>
+    </main>
+    <footer>
+      <p>© 2025 Clay Zarinana. All rights reserved.</p>
+    </footer>
+</div>
+	
+</body>
+	
+</html>
+	
