--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <style>
     h1 {
-      font-size: 50px;
+      font-size: 33px;
       text-align: center;
       color: white;
       margin: 0;
@@ -129,7 +129,7 @@
   <div id="container">
 
     <header>
-      <h1>My First Website</h1>
+      <h1>Clay Zarinana's Portfolio&nbsp;</h1>
       <nav class="subnav">
         <a href="index.html">Home</a> |
         <a href="aboutme.html">About Me</a> |
@@ -138,14 +138,14 @@
     </header>
 
     <main>
-      <!-- Main content in a clean white box -->
       <div class="content-box">
         <!-- Intro section -->
         <div class="intro-container">
+			<h3> A Bit about me! </h3>
           <p class="intro">
             Hello! I’m Clay Zarinana, an emerging graphic designer that specializes in character design, brochure/flyers, and digital illustration using Photoshop and Illustrator. This portfolio is a showcase of my artistic and growing technical skills.
           </p>
-          <img src="https://cdn.pixabay.com/photo/2016/03/27/18/54/technology-1283624_1280.jpg" alt="Clay Zarinana" class="intro-image">
+          <img src="https://cdn.pixabay.com/photo/2016/03/27/18/54/technology-1283624_1280.jpg" alt="Computer with HTML code" class="intro-image">
         </div>
 
         <div class="divider"></div>
@@ -172,13 +172,21 @@
             <p><a href="#">Read more...</a></p>
           </div>
         </div>
+	    <div class="divider"></div>
+		  <h3> What ive done so far !&nbsp;&nbsp; </h3>
+		 <li> Added a photo with alt text</li>
+		  <li> Proper Page structure</li>
+		  <li>Added image header that matches my color scheme</li>
+		  <li> Basic links </li>
+		  <li> 3 Boxes that should be able to redirect you to their proper page.</li>
       </div>
+		
     </main>
 
     <footer>
       <p>© 2025 Clay Zarinana. All rights reserved.</p>
     </footer>
 
-  </div>
+</div>
 </body>
 </html>
