--- a/aboutme.html
+++ b/aboutme.html
@@ -25,18 +25,37 @@
     <main>
 		
       <div class="content-box">
+	<div class="intro-container">
+		
+  <div style="text-align: center;">
+    <img src="https://i.imgur.com/W5WOWNA.png" 
+         alt="Favorite things!" 
+         style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
+
+    <img src="https://i.imgur.com/NAawfGz.png" 
+         alt="Profile Picture" 
+         style="width: 300px; height: 300px; border-radius: 50%; margin-top: 15px;">
+	  
+  </div>
+  <div style="flex: 1; 
+              padding: 20px; 
+              color: white; 
+              background-image: url('https://i.pinimg.com/564x/51/1f/f8/511ff879d0a2d4a1f938a0c8a019150c.jpg'); 
+              background-size: cover; 
+              background-position: center; 
+              border-radius: 12px;">
+    <p>
+      Hello! I’m Clay Zarinana, an emerging graphic designer that specializes in
+      character design, brochures/flyers, and digital illustration using Photoshop
+      and Illustrator. This portfolio is a showcase of my artistic and growing
+      technical skills.
+    </p>
+  </div>
+
+</div>
+
         <div class="intro-container">
-			
-		<h1 style="text-align: center;">About me!</h1>
-
 		<p class="intro">
-  Hello! I'm Clay Zarinana, a Highschool Senior at El Camino High School. 
-  My favorite things to do in my spare time include playing video games, 
-  drawing, and watching YouTube videos! I'm very passionate about science 
-  and other things.
-</p>
-
-        </div>
 		  <div  class= "divider"> </div>
 		    <div style="display: flex; align-items: flex-start;">
   <div style="width: 320px; margin-right: 20px;">
@@ -59,13 +78,7 @@
   </div>
 
 </div>
-		  <div class="divider"></div>
-		  <h3> What ive done so far !&nbsp;&nbsp; </h3>
-		 <li> Added a photo with alt text</li>
-		  <li> Proper Page structure</li>
-		  <li>Added image header that matches my color scheme</li>
-		  <li> Basic links </li>
-		  <li> 3 Boxes that should be able to redirect you to their proper page.</li>
+		  
       </div>
     </main>
     <footer>
