--- a/index.html
+++ b/index.html
@@ -139,24 +139,22 @@
 
     <main>
       <div class="content-box">
-        <!-- Intro section -->
         <div class="intro-container">
-			<h3> A Bit about me! </h3>
-          <p class="intro">
-            Hello! I’m Clay Zarinana, an emerging graphic designer that specializes in character design, brochure/flyers, and digital illustration using Photoshop and Illustrator. This portfolio is a showcase of my artistic and growing technical skills.
+			 <div style="text-align: center;">
+  <img src="https://i.imgur.com/CEzKSoc.png" 
+     alt="Favorite things!" 
+     style="max-width: 400px; height: auto; display: block; margin: 0 auto;">
+
+</div>
+          <p class="intro" style="text-align: center; color: white; margin-bottom: 50px; background-color: #99704D">
+            Hello! I’m Clay Zarinana, a highschool senior and emerging graphic designer that specializes in character design, brochure/flyers, and digital illustration using Photoshop and Illustrator. This portfolio is a showcase of my artistic and growing technical skills.
           </p>
           <img src="https://cdn.pixabay.com/photo/2016/03/27/18/54/technology-1283624_1280.jpg" alt="Computer with HTML code" class="intro-image">
         </div>
-
-        <div class="divider"></div>
-
-        <p>
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..."
-        </p>
         <div class="columns-wrapper">
           <div class="threecolumns">
             <h3>Favorite Things</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+            <p>Not related but i will fix the font color i know...&nbsp;</p>
             <p><a href="favoritethings.html">Read more...</a></p>
           </div>
 
@@ -173,12 +171,20 @@
           </div>
         </div>
 	    <div class="divider"></div>
-		  <h3> What ive done so far !&nbsp;&nbsp; </h3>
-		 <li> Added a photo with alt text</li>
-		  <li> Proper Page structure</li>
-		  <li>Added image header that matches my color scheme</li>
-		  <li> Basic links </li>
-		  <li> 3 Boxes that should be able to redirect you to their proper page.</li>
+		  <div style="text-align: center; margin: 20px 0;">
+  <div style="position: relative; display: inline-block; text-align: center;">
+    <img src="https://static.vecteezy.com/system/resources/previews/027/240/906/non_2x/aesthetic-sticky-note-free-png.png" 
+         alt="Sticky note" 
+         style="width: 300px; height: auto; display: block;">
+
+    <div style="position: absolute; top: 50%; left: 50%; 
+                transform: translate(-50%, -50%);
+                font-size:15px; font-weight: bold; 
+                color: #333; font-family: Arial, sans-serif; 
+                width: %; line-height: 1.4;">
+      Update Log<br>
+      - Gathered 6/8 images  <br>
+      - Breifly Talked about subjects and why i liked them
       </div>
 		
     </main>
