--- a/favoritethings.html
+++ b/favoritethings.html
@@ -18,7 +18,8 @@
       <nav class="subnav">
         <a href="index.html">Home</a> |
         <a href="aboutme.html">About Me</a> |
-        <a href="favoritethings.html">Favorite Things</a>
+        <a href="favoritethings.html">Favorite Things</a> |
+		  <a href="contact.html">Contact Me!</a>
       </nav>
     </header>
 
