--- a/aboutme.html
+++ b/aboutme.html
@@ -45,12 +45,11 @@
               background-size: cover; 
               background-position: center; 
               border-radius: 12px;">
-    <p>
-      Hello! I’m Clay Zarinana, an emerging graphic designer that specializes in
-      character design, brochures/flyers, and digital illustration using Photoshop
-      and Illustrator. This portfolio is a showcase of my artistic and growing
-      technical skills.
-    </p>
+    <p style="color:  black;"> 
+      Hello! I’m Clay Zarinana, a passionate highschool senior- and graphic designer and artist.</p>
+	  <p style="color: black"> I specialize in things such as character design, brochures, and flyers using Adobe photoshop, IbisPaintX, and Adobe Illustrator. </p>
+	  <p style="color: black"> When I'm not doing things related to graphic design, I'll be playing video games (such as yakuza, new super mario bros, kingdom hearts, etc), drawing fanart of my favorite characters, or grabbing some food! </p>
+	   <a href="favoritethings.html"> <strong> Learn more about my interests!</strong></a>
   </div>
 
 </div>
@@ -59,12 +58,12 @@
 		<p class="intro">
 		  <div  class= "divider"> </div>
 		    <div style="display: flex; align-items: flex-start;">
-  <div style="width: 320px; margin-right: 20px;">
+  <div style="width: 320px; ">
     <iframe 
       width="300" 
       height="170" 
-      src="https://www.youtube.com/embed/jDZX7T-zq_k" 
-      title="Youtube Video" 
+      src="https://www.youtube.com/embed/UmMuG53DriA" 
+      title="Chiikawa!" 
       frameborder="0" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
       allowfullscreen
