--- a/index.html
+++ b/index.html
@@ -140,22 +140,21 @@
 
     <main>
       <div class="content-box">
-        <div class="intro-container">
+<div class="intro-container">
 			 <div style="text-align: center;">
   <img src="https://i.imgur.com/CEzKSoc.png" 
-     alt="Favorite things!" 
+     alt="Welcome!" 
      style="max-width: 400px; height: auto; display: block; margin: 0 auto;">
 
 </div>
-          <p class="intro" style="text-align: center; color: white; margin-bottom: 50px; background-color: #99704D">
+  <p class="intro" style="text-align: center; color: white; margin-bottom: 50px; background-color: #99704D">
             Hello! I’m Clay Zarinana, a highschool senior and emerging graphic designer that specializes in character design, brochure/flyers, and digital illustration using Photoshop and Illustrator. This portfolio is a showcase of my artistic and growing technical skills.
           </p>
-          <img src="https://cdn.pixabay.com/photo/2016/03/27/18/54/technology-1283624_1280.jpg" alt="Computer with HTML code" class="intro-image">
-        </div>
+</div>
         <div class="columns-wrapper">
           <div class="threecolumns">
             <h3>Favorite Things</h3>
-            <p>Not related but i will fix the font color i know...&nbsp;</p>
+            <p>Things that I enjoy doing when i'm not working on web/graphics design! </p>
             <p><a href="favoritethings.html">Read more...</a></p>
           </div>
 
@@ -166,8 +165,8 @@
           </div>
 
           <div class="threecolumns">
-            <h3>Projects</h3>
-            <p>Check out some of my latest graphic design projects, including logo designs and digital illustrations.</p>
+            <h3>Project Gallery&nbsp;</h3>
+            <p>Check out some of my latest graphic design projects, including logo designs and digital illustrations!</p>
             <p><a href="#">Read more...</a></p>
           </div>
         </div>
@@ -183,10 +182,11 @@
                 font-size:15px; font-weight: bold; 
                 color: #333; font-family: Arial, sans-serif; 
                 width: %; line-height: 1.4;">
-      Update Log<br>
-      - Gathered 6/8 images  <br>
-      - Breifly Talked about subjects and why i liked them
-      </div>
+      <p> Update Log<br>
+        -img floating next to text</p>
+      <p>-links lead to page (1 not working atm)&nbsp;</p>
+      <p>-Contact page not ready&nbsp;</p>
+    </div>
 		
     </main>
 
