--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
         <a href="index.html">Home</a> |
         <a href="aboutme.html">About Me</a> |
         <a href="favoritethings.html">Favorite Things</a>
-		  <a href="contact.html">Contact Me!</a>
+		  <a href="contacts.html">Contact Me!</a>
       </nav>
     </header>
 
