--- a/favoritethings.html
+++ b/favoritethings.html
@@ -19,7 +19,7 @@
         <a href="index.html">Home</a> |
         <a href="aboutme.html">About Me</a> |
         <a href="favoritethings.html">Favorite Things</a> |
-		  <a href="contact.html">Contact Me!</a>
+		  <a href="contacts.html">Contact Me!</a>
       </nav>
     </header>
 
@@ -157,20 +157,21 @@
   </div>
 
   <div class="threecolumns">
-    <h3>Old(er) Tech</h3>
+    <h3>40s-80s music&nbsp;&nbsp;</h3>
     <img
-      src="https://i.imgur.com/Sp7CPPq.jpeg"
+      src="https://i.imgur.com/jb4zgy6.png"
       alt="Old Tech"
       class="lightbox-trigger"
       style="width: 200px; display: block; margin: 0 auto 8px;"
     />
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-      fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-      mollit anim id est laborum.
+ Growing up, music has always been a super important factor in my life, and always will be! My dad being a fan of 80s music would often play it in the car when I was a kid, making it feel super nostalgic for me now. My love for 1940s music came from christmas songs, more specifically frank sinatra- I've always loved the warm whimsical instrumentals from sinatras music along with the gentle fun lyrics. 
     </p>
+	  <p> <strong> Recs:</strong></p>
+	  <li> Eyes without a face - Billy I.</li>
+	  <li> Tainted love -  Soft Cell</li>
+	  <li> 黄昏のBAY CITY - Junko yagami </li>
+	  <li> Somethin' Stupid - Frank + Nancy Sinatra</li>
   </div>
 </div>
 
@@ -223,8 +224,8 @@
       line-height: 1.4;
     ">
       <p>
-        Update Log<br>
-        - Gathered 6/8 images<br>
+        Update Log
+        <br>
         - Briefly talked about subjects and why I liked them
       </p>
       <p>- Lightbox now working!</p>
