--- a/favoritethings.html
+++ b/favoritethings.html
@@ -148,12 +148,7 @@
       style="width: 200px; display: block; margin: 0 auto 8px;"
     />
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-      fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-      mollit anim id est laborum.
-    </p>
+    Sc </p>
   </div>
 
   <div class="threecolumns">
@@ -165,11 +160,10 @@
       style="width: 200px; display: block; margin: 0 auto 8px;"
     />
     <p>
- Growing up, music has always been a super important factor in my life, and always will be! My dad being a fan of 80s music would often play it in the car when I was a kid, making it feel super nostalgic for me now. My love for 1940s music came from christmas songs, more specifically frank sinatra- I've always loved the warm whimsical instrumentals from sinatras music along with the gentle fun lyrics. 
-    </p>
+ Growing up, music has always been a super important factor in my life, and always will be!  My love for 1940s and 80s music actually came from christmas songs. I always loved when christmas and the holicays rolled around just because I got to hear this type of music in the radio.</p>
 	  <p> <strong> Recs:</strong></p>
 	  <li> Eyes without a face - Billy I.</li>
-	  <li> Tainted love -  Soft Cell</li>
+	  <li> Everything she wants - Wham&nbsp;</li>
 	  <li> 黄昏のBAY CITY - Junko yagami </li>
 	  <li> Somethin' Stupid - Frank + Nancy Sinatra</li>
   </div>
